--- a/newGame/.godot/editor/editor_layout.cfg
+++ b/newGame/.godot/editor/editor_layout.cfg
@@ -1,26 +1,26 @@
 [docks]
 
-dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=0
+dock_split_2=141
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=382
+dock_hsplit_3=-432
 dock_hsplit_4=0
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://world.tscn"]
+open_scenes=["res://World/bush.tscn", "res://Effects/GrassEffect.tscn", "res://world.tscn", "res://World/grass.tscn"]
 
 [ScriptEditor]
 
-open_scripts=[]
-open_help=[]
-script_split_offset=140
+open_scripts=["res://World/Grass.gd", "res://Effects/GrassEffect.gd", "res://Player/Player.gd", "res://README.txt"]
+open_help=["LightOccluder2D", "Node"]
+script_split_offset=635
 list_split_offset=0
